# c_examples

./: .gitignore  Dockerfile  Makefile
c++_examples/: check_cpp_standard.cpp  classes.cpp  modules.cpp  modules_user.cpp  references.cpp  vector_user.cpp
c++_examples/vector/: vector.cpp  vector.h
c_examples/: Dockerfile  Makefile  docker-compose.yml
c_examples/beej/: README.md  client.c  examples.c  server.c  showip.c
c_examples/client_server/: CMakeLists.txt  Makefile  README.md
c_examples/client_server/include/: client.h  file_transfer.h  protocol.h  server.h  sockets.h  utils.h
c_examples/client_server/src/: CMakeLists.txt  client.c  file_transfer.c  protocol.c  server.c  sockets.c  utils.c
c_examples/client_server/tests/: CMakeLists.txt  readme.md  test_client.c  test_file_transfer.c  test_protocol.c  test_server.c  test_utils.c
c_examples/client_server/tests/fake_server_files/: test.txt  test_multiple_chunks.txt
c_examples/producer_consumer/: CMakeLists.txt  Makefile  README.md
c_examples/producer_consumer/src/: CMakeLists.txt  buffer.c  buffer.h  main.c  simulation.c  simulation.h  utils.c  utils.h
c_examples/producer_consumer/tests/: CMakeLists.txt  test_buffer.c  test_simulation.c  test_utils.c
c_examples/socket_tutorial/: README.md  http_client.c  http_server.c  index.html  tcp_client.c  tcp_server.c
examples/: hello_world.c  pointers.c  types.c
